Bugfix: h3 not visible on Safari

--- a/app/client/main.less
+++ b/app/client/main.less
@@ -413,7 +413,6 @@ body {
   h3 {
     break-after : avoid;
     break-before: always;
-    position    : relative;
   }
 }
 
